# UriResolutions

./: .gitignore
C++Resolutions/: CMakeLists.txt
C++Resolutions/Ad-Hoc/: 1136.cpp  2090.cpp
C++Resolutions/Beginner/: 1828.cpp  1837.cpp  1858.cpp  1864.cpp  1865.cpp  1866.cpp  1924.cpp  1930.cpp  1933.cpp  1962.cpp  1963.cpp  1983.cpp  1985.cpp  2165.cpp
C++Resolutions/DataStructures/: 1023.cpp  1088.cpp  1110.cpp  1215.cpp  1261.cpp  1449.cpp  1451.cpp  1520.cpp  1523.cpp  1527.cpp  1566.cpp  1709.cpp  1766.cpp  1911.cpp  2091.cpp
C++Resolutions/Graph/: 1082.cpp
C++Resolutions/Math/: 1028.cpp  2238.cpp
C++Resolutions/Paradigms/: 1767.cpp  2243.cpp
C++Resolutions/Strings/: 1243.cpp  1276.cpp
JavaResolutions/: .project
JavaResolutions/src/exUri/adHoc/: Ex1030.java  Ex1091.java  Ex1104.java  Ex1107.java  Ex1125.java  Ex1138.java  Ex1171.java  Ex1192.java  Ex1360.java  Ex1366.java  Ex1403.java  Ex1407.java  Ex1441.java  Ex1546.java  Ex1980.java
JavaResolutions/src/exUri/beginner/: Ex1018.java  Ex1035.java  Ex1037.java  Ex1038.java  Ex1042.java  Ex1043.java  Ex1044.java  Ex1045.java  Ex1047.java  Ex1049.java  Ex1050.java  Ex1066.java  Ex1067.java  Ex1071.java  Ex1072.java  Ex1074.java  Ex1080.java  Ex1094.java  Ex1101.java  Ex1115.java  Ex1134.java  Ex1153.java  Ex1157.java  Ex1172.java  Ex1179.java
JavaResolutions/src/exUri/dataStructures/: Ex1023.java  Ex1025.java  Ex1062.java  Ex1068.java  Ex1069.java  Ex1110.java  Ex1162.java  Ex1251.java  Ex1256.java  Ex1259.java  Ex1424.java  Ex1430.java  Ex1527.java  Ex1548.java  Ex1861.java  Ex2111.java
JavaResolutions/src/exUri/graphs/: Basic.java  BasicTwo.java  Ex1076.java
python_resolutions/beginner/: 1020.py  1021.py  1035.py  1036.py  1041.py  1042.py  1043.py  1044.py  1046.py  1049.py  1050.py  1051.py  1052.py  1057.py  1060.py  1061.py  1064.py  1065.py  1066.py  1067.py  1070.py  1071.py  1072.py  1073.py  1074.py  1078.py  1079.py  1080.py  1087.py  1094.py  1095.py  1096.py  1097.py  1098.py  1099.py  1103.py  1118.py  1129.py  1133.py  1140.py  (+20 more)
python_resolutions/big_problems/: 1744.py
python_resolutions/data_structures/: 2091.py
(+34 files in other folders)
